# quantumlauncher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  quantum_launcher.spec
.github/workflows/: build-appimage.yml  build-deb.yml  build-macos.yml  build-rpm.yml  clippy.yml  release.yml
assets/binaries/: README.md
assets/freedesktop/: Info.plist  quantum-launcher.desktop  quantum-launcher.metainfo.xml
assets/freedesktop/debian/: control
changelogs/: 0.1.md  0.2.md  0.3.1.md  0.3.md  0.4.1.md  0.4.2.md  0.4.md  0.5.1.md  0.5.md
crates/ezshortcut/: README.md
crates/ezshortcut/src/os/: mod.rs  stub.rs  unix.rs
crates/ql_core/: Cargo.toml
crates/ql_core/src/: constants.rs  error.rs  file_utils.rs  lib.rs  progress.rs  read_log.rs  structs.rs
crates/ql_core/src/json/: asset_index.rs  forge.rs  instance_config.rs  manifest.rs  optifine.rs  version.rs
crates/ql_core/src/print/: macros.rs  mod.rs
crates/ql_instances/: Cargo.toml
crates/ql_instances/src/: json_profiles.rs  launcher_update_detector.rs  lib.rs
crates/ql_instances/src/auth/: authlib.rs  mod.rs  ms.rs
crates/ql_instances/src/auth/yggdrasil/: oauth.rs
crates/ql_instances/src/download/: downloader.rs  libraries.rs  mod.rs
crates/ql_instances/src/instance/: migrate.rs
crates/ql_instances/src/instance/launch/: error.rs  launcher.rs  mod.rs
crates/ql_java_handler/: Cargo.toml
crates/ql_java_handler/src/: alternate_java.rs  lib.rs
crates/ql_java_handler/src/json/: list.rs
crates/ql_mod_manager/src/loaders/: neoforge.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/loaders/fabric/: mod.rs  version_list.rs
crates/ql_mod_manager/src/loaders/forge/: mod.rs
crates/ql_mod_manager/src/presets/: mod.rs
crates/ql_mod_manager/src/store/: error.rs  id.rs  local_json.rs  mod.rs  recommended.rs  types.rs
crates/ql_mod_manager/src/store/curseforge/: download.rs  mod.rs
crates/ql_mod_manager/src/store/modpack/: curseforge.rs  modrinth.rs
crates/ql_mod_manager/src/store/modrinth/: info.rs  mod.rs
crates/ql_packager/src/: lib.rs  multimc.rs
crates/ql_servers/src/: create.rs  lib.rs  run.rs
docs/: CODEBASE.md  COMMUNITY_FIXES.md  ROADMAP.md  SUMMARY.md
patches/: clippy-aarch64-macos.patch
quantum_launcher/: Cargo.toml
quantum_launcher/src/: config.rs  icons.rs  launcher_update.rs  main.rs  mclog_upload.rs  tick.rs  update.rs  view.rs
quantum_launcher/src/cli/: command.rs  mod.rs
quantum_launcher/src/config/: discord_rpc.rs  mod.rs
quantum_launcher/src/config/sidebar/: drag_drop.rs  mod.rs  types.rs
quantum_launcher/src/menu_renderer/: create.rs  edit_instance.rs  launch.rs  mod.rs  settings.rs
quantum_launcher/src/menu_renderer/mods/: export_mods.rs  install_loader.rs  mods_manage.rs  mods_store.rs  presets.rs
quantum_launcher/src/menu_renderer/onboarding/: changelog.rs  welcome.rs
quantum_launcher/src/menu_renderer/settings/: mod.rs  tab_presence.rs
quantum_launcher/src/menu_renderer/sidebar/: drop_recv.rs  mod.rs
quantum_launcher/src/message_handler/: arrow_keys.rs  iced_event.rs  mod.rs
quantum_launcher/src/message_update/: accounts.rs  create_instance.rs  discord_rpc.rs  edit_instance.rs  launch.rs  main_menu.rs  manage_mods.rs  mod.rs  mod_store.rs  presets.rs  recommended.rs  shortcuts.rs
quantum_launcher/src/state/: images.rs  menu.rs  message.rs  mod.rs
quantum_launcher/src/stylesheet/: styles.rs  widgets.rs
scripts/: README.md
tests/: Cargo.toml  README.md  verify_natives.sh
tests/src/: launch.rs  main.rs  version.rs
tests/src/search/: macos.rs  mod.rs  unix.rs  windows.rs
