[workspace]
members = [
    "quantum_launcher",
    "crates/ql_instances",
    "crates/ql_mod_manager",
    "crates/ql_core",
    "crates/ql_servers",
    "crates/ql_java_handler",
    "crates/ql_packager",
    "tests",
]
default-members = ["quantum_launcher"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    # Default features
    "charset",
    "http2",
] }

tokio = { version = "1", features = ["fs", "macros", "process"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
cfg-if = "1"

owo-colors = "3"
chrono = "0.4"
thiserror = "2"
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
clap = { version = "4", features = ["help", "derive"] }

# Note: 5.1 not used because of MSRV
zip = { version = "5.0.1", default-features = false, features = ["deflate"] }

walkdir = "2.3"
image = { version = "0.24", default-features = false, features = [
    # Web formats are enough
    #"avif",
    "gif",
    "ico",
    "jpeg",
    "png",
    "webp",
] }
tempfile = "3"
regex = "1"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev-ql]
inherits = "dev"
strip = "symbols"

[profile.release-dbg]
inherits = "release"
debug = true

[profile.release-ql]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = "symbols"
panic = "abort"
