[package]
name = "quantum_launcher"
version = "0.5.0"
edition = "2021"

authors = ["Mrmayman <navneetkrishna22@gmail.com>"]
description = "A simple, powerful Minecraft Launcher"
keywords = ["minecraft", "mc", "launcher", "game-tools", "modding"]
license = "GPL-3.0-only"
homepage = "https://mrmayman.github.io/quantumlauncher"
repository = "https://github.com/Mrmayman/quantumlauncher/"
readme = "../README.md"
categories = ["games"]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "3"

[features]
default = ["wgpu", "tiny_skia", "auto_update"]
wgpu = ["iced/wgpu"]
tiny_skia = ["iced/tiny-skia"]
# checking for updates, autoupdater
auto_update = []

debug = ["iced/debug"]
simulate_linux_arm64 = ["ql_instances/simulate_linux_arm64"]
simulate_linux_arm32 = ["ql_instances/simulate_linux_arm32"]
simulate_macos_arm64 = ["ql_instances/simulate_macos_arm64"]

[dependencies]
ql_instances.path = "../crates/ql_instances"
ql_mod_manager.path = "../crates/ql_mod_manager"
ql_core.path = "../crates/ql_core"
ql_servers.path = "../crates/ql_servers"
ql_packager.path = "../crates/ql_packager"

# For the GUI
iced = { version = "0.13", default-features = false, features = [
    "tokio",
    "image",
    "svg",
    "lazy",
    "advanced",
] }
# The HTML/Markdown renderer
# There is a "0.1.0" version, but it's outdated.
frostmark = { git = "https://github.com/Mrmayman/frostmark.git", rev = "94a4e90456fcc31479c6d58e3b3ca89c8ec5e6c4", default-features = false, features = ["markdown"] } # TOML is a terrible language
# For table widget, I don't need this
# tabular = { git = "https://github.com/Mrmayman/tabular.git" }

serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
semver.workspace = true

# For URL encoding in log uploads
urlencoding = "2"

# For managing async tasks
tokio.workspace = true
# For managing the logging time/date
chrono.workspace = true
# For the icon widget macro
paste = "1"
# For the file picker
rfd.workspace = true

# Terminal
owo-colors.workspace = true
clap = { version = "4", features = ["help", "derive"] }
terminal_size = "0.4"

# OS APIs
notify = "8"
open = "5.3.2"
dark-light = "2"

# iced::widget::markdown doesn't have inline
# HTML support, so I made my own renderer.

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console"] }
